/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

import "system/guid.proto";
import "dolittle/interaction/events.relativity/event_metadata.proto";
import "google/protobuf/any.proto";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Events.Relativity.Protobuf";

// Represents an event
message EventEnvelope {
    guid id = 1;
    EventMetadata metadata = 2;
    map<string, google.protobuf.Any> event = 3;
}