/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/

syntax = "proto3";

import "system/guid.proto";
import "dolittle/interaction/events.relativity/event_source_version.proto";

package dolittle.events.relativity;

option csharp_namespace = "Dolittle.Runtime.Grpc.Interaction";

// Represents a versioned event source
message VersionedEventSource {
    EventSourceVersion   version = 1;
    guid eventSource = 2;
    guid artifact = 3;
}